force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>new pick</fullName>
            </value>
            <value>
                <fullName>test valure</fullName>
                <isActive>false</isActive>
                <label>test valure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>