force-app/main/default/objects/Account/fields/Codescan_Demo__c.field-meta.xml
<CustomField>
    <fullName>Codescan_Demo__c</fullName>
    <description>CS DEMO</description>
    <label>Codescan Demo</label>
    <length>25</length>
    <type>Text</type>
</CustomField>