force-app/main/default/objects/Account/fields/Hexa_Project__c.field-meta.xml
<CustomField>
    <fullName>Hexa_Project__c</fullName>
    <label>Hexa Project</label>
    <length>25</length>
    <type>Text</type>
</CustomField>