force-app/main/default/objects/Account/fields/hexagon__c.field-meta.xml
<CustomField>
    <fullName>hexagon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TESTING FIELD</description>
    <label>hexagon</label>
    <type>Checkbox</type>
</CustomField>