force-app/main/default/objects/Account/fields/Hexagon_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Hexagon_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hexagon Checkbox</label>
    <type>Checkbox</type>
</CustomField>