force-app/main/default/objects/Account/fields/HexaTest__c.field-meta.xml
<CustomField>
    <fullName>HexaTest__c</fullName>
    <label>HexaTest</label>
    <length>25</length>
    <type>Text</type>
</CustomField>