force-app/main/default/objects/Account/fields/NEW_hexafield__c.field-meta.xml
<CustomField>
    <fullName>NEW_hexafield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEW hexafield</label>
    <type>Checkbox</type>
</CustomField>