force-app/main/default/objects/Account/fields/Process_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Process_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Enabled</label>
    <type>Checkbox</type>
</CustomField>