force-app/main/default/objects/Account/fields/service_request__c.field-meta.xml
<CustomField>
    <fullName>service_request__c</fullName>
    <label>service request</label>
    <length>20</length>
    <type>Text</type>
</CustomField>