force-app/main/default/objects/Account/fields/Test_revert__c.field-meta.xml
<CustomField>
    <fullName>Test_revert__c</fullName>
    <label>Test revert</label>
    <length>24</length>
    <type>Text</type>
</CustomField>